GNOME Bugzilla – Bug 724230
The search is broken
Last modified: 2014-02-12 20:40:09 UTC
After the pacthes from bug 724052 pushed, the search don't work anymore. I see this warning when type to search in the find bar: ** (epiphany:31270): CRITICAL **: void webkit_find_controller_search_finish(WebKitFindController*): assertion 'WEBKIT_IS_FIND_CONTROLLER(findController)' failed ** (epiphany:31270): CRITICAL **: void webkit_find_controller_search(WebKitFindController*, const gchar*, guint, guint): assertion 'WEBKIT_IS_FIND_CONTROLLER(findController)' failed ** (epiphany:31270): CRITICAL **: void webkit_find_controller_search_finish(WebKitFindController*): assertion 'WEBKIT_IS_FIND_CONTROLLER(findController)' failed ** (epiphany:31270): CRITICAL **: void webkit_find_controller_search_finish(WebKitFindController*): assertion 'WEBKIT_IS_FIND_CONTROLLER(findController)' failed
Somehow, ephy_find_toolbar_set_web_view() is always getting called with the same webview, causing an early return and the controller is never actually set. This broke with 31bc1fe6ccbe53dfd14822d44fc9563a32799316. If the early return in ephy_find_toolbar_set_web_view() is removed, then this works. But I don't think that's the proper fix.
Created attachment 268958 [details] [review] ephy-find-toolbar: properly set its webview We were setting the webview twice to the find-bar: upon creation and then everytime the notebook switched to the page containing it. However, only the second time all the signal handlers related to search were connected, and not even properly. Fix all this mess by using the proper setter() and removing the public method, after all the webview property is construct only.
Attachment 268958 [details] pushed as 48ee65c - ephy-find-toolbar: properly set its webview